--- a/internal/components/submitForm/submitForm.css
+++ b/internal/components/submitForm/submitForm.css
@@ -11,6 +11,7 @@ textarea  {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     box-shadow: 5px 5px 0px #5e8f97;
+  user-select:unset;
 }
 #errorField {
     color: #9f4f04;
@@ -48,7 +49,6 @@ input[type="file"] {
     display: none;
 }
 :focus-visible {
-  user-select: none;
   border: none;
   outline: none;
   caret-color: transparent;
