--- a/internal/components/submitForm/submitForm.css
+++ b/internal/components/submitForm/submitForm.css
@@ -1,7 +1,6 @@
 {{ define "submitForm.css" }}
 #section-submitForm {
     display: none;
-  user-select: none;
 }
 textarea  {
     font-size: 1.1em;
@@ -11,7 +10,6 @@ textarea  {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     box-shadow: 5px 5px 0px #5e8f97;
-  user-select:unset;
 }
 #errorField {
     color: #9f4f04;
@@ -48,7 +46,7 @@ textarea  {
 input[type="file"] {
     display: none;
 }
-:focus-visible {
+input:focus-visible {
   border: none;
   outline: none;
   caret-color: transparent;
