--- a/internal/components/nav/nav.tmpl
+++ b/internal/components/nav/nav.tmpl
@@ -2,7 +2,7 @@
 <div class="section-outer nav-outer section-nav" id="section-nav">
     <div class="nav-inner">
         <div class="leftNav">
-            <div class="homeButt navButt" onclick="window.location = window.location.origin">TM2</div>
+            <div class="homeButt navButt" onclick="window.location = window.location.origin">#TagMachine</div>
             {{if eq .ViewType "post"}}
         </div>
         {{else}}
@@ -12,7 +12,7 @@
         <div class="navButt newest" onclick="getStream('newest')">New</div>
         {{end}}
     </div>
-    <div class="newPost navButt" onclick="togglePostForm()" id="newPostButt">Post</div>
+    <div class="newPost navButt" onclick="togglePostForm()" id="newPostButt">★</div>
     {{end}}
 </div>
 </div>
