--- a/internal/components/nav/nav.css
+++ b/internal/components/nav/nav.css
@@ -11,13 +11,21 @@
     /* color: #ffeda8; */
     color: cornsilk;
     font-size: 0.9em;
+    animation: 500ms linear scalin;
 }
 .homeButt {
-    background-color: #913200;
+    /* background-color: #913200; */
+    background-color: #b8bb0c;
     font-weight: 600;
+    border: 1px solid #7f8f0f;
+    text-shadow: 1px 1px 1px #7f8901;
+    color: #fbffa5;
 }
 .newPost {
     background-color: #8f9100;
+    background-color: #9cd4d5;
+    border: 1px solid #538d99;
+    text-shadow: 1px 1px 2px #1b8891;
 }
 .nav-inner {
     display: flex;
