--- a/internal/components/submitForm/submitForm.css
+++ b/internal/components/submitForm/submitForm.css
@@ -10,6 +10,7 @@ textarea  {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 200;
     box-shadow: 5px 5px 0px #5e8f97;
+    animation: 500ms linear scalin;
 }
 #errorField {
     color: #9f4f04;
@@ -28,12 +29,15 @@ textarea  {
     flex-direction: column;
 }
 .postSubmitButt {
-    background-color: #8d561f;
+    /* background-color: #8d561f; */
     text-align: center;
     cursor: pointer;
     padding: 0.5em;
     border: none;
     width: 25%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #bc732a;
+
 }
 .uploadButt {
     cursor: pointer;
@@ -47,9 +51,9 @@ input[type="file"] {
     display: none;
 }
 input:focus-visible {
-  border: none;
-  outline: none;
-  caret-color: transparent;
+    border: none;
+    outline: none;
+    caret-color: transparent;
 }
 .formButtons {
     display: flex;
