--- a/internal/components/nav/nav.tmpl
+++ b/internal/components/nav/nav.tmpl
@@ -12,7 +12,7 @@
         <div class="navButt newest" onclick="getStream('newest')">New</div>
         {{end}}
     </div>
-    <div class="newPost navButt" onclick="togglePostForm()" id="newPostButt">★</div>
+    <div class="newPost navButt" onclick="togglePostForm()" id="newPostButt">+</div>
     {{end}}
 </div>
 </div>
