--- a/internal/components/stream/stream.css
+++ b/internal/components/stream/stream.css
@@ -12,9 +12,10 @@
     margin: 1.5em 0;
     border-radius: 0.4em;
     /* background: #fffee4; */
-    background-color: white;
+    background-color: #fffff6;
     font-weight: 400;
     animation: 500ms linear scalin;
+    border: 1px solid #e4e0d2;
 }
 .post-reply {
     border-right: none;
