--- a/internal/pages/main/main.tmpl
+++ b/internal/pages/main/main.tmpl
@@ -4,6 +4,7 @@
   <body>
     {{template "banner.tmpl" . }}
     {{template "nav.tmpl" . }}
+    {{template "loginForm.tmpl" . }}
     {{template "submitForm.tmpl" . }}
     {{template "stream.tmpl" . }}
     {{template "nextPage.tmpl" . }}
