--- a/internal/components/nav/nav.tmpl
+++ b/internal/components/nav/nav.tmpl
@@ -12,7 +12,12 @@
         <div class="navButt newest" onclick="getStream('newest')">New</div>
         {{end}}
     </div>
+    {{if .UserData.IsLoggedIn }}
     <div class="newPost navButt" onclick="togglePostForm()" id="newPostButt">+</div>
+      <input onclick="auth('logout')" value="logout" class="signupFormButt navButt"/>
+    {{else}}
+    <div class="loginButt navButt" onclick="toggleLoginForm()" id="showLoginButt">Login</div>
+    {{end}}
     {{end}}
 </div>
 </div>
