--- a/internal/components/loginForm/loginForm.tmpl
+++ b/internal/components/loginForm/loginForm.tmpl
@@ -1,6 +1,6 @@
 {{ define "loginForm.tmpl" }}
 <div class="section-outer loginForm-outer section-loginForm" id="section-loginForm">
-  <form class="loginForm" id="fileUploadForm" enctype="multipart/form-data">
+  <form class="loginForm" id="loginForm" enctype="multipart/form-data">
     <div class="formInputs">
       <input class="username navButt" id="username" placeholder="username" />
       <input class="password navButt" id="password" placeholder="password" type="password" />
