--- a/internal/pages/main/main.tmpl
+++ b/internal/pages/main/main.tmpl
@@ -8,5 +8,6 @@
     {{template "submitForm.tmpl" . }}
     {{template "stream.tmpl" . }}
     {{template "nextPage.tmpl" . }}
+    <input onclick="auth('logout')" value="logout" class="signupFormButt navButt"/>
   </body>
 </html>
