--- a/internal/components/stream/stream.css
+++ b/internal/components/stream/stream.css
@@ -21,6 +21,7 @@
     border-right: none;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
+    padding: 0.5em 0em 0.5em 1em;
 }
 .body-outer {
     cursor: pointer;
