--- a/internal/pages/main/main.tmpl
+++ b/internal/pages/main/main.tmpl
@@ -8,6 +8,8 @@
     {{template "submitForm.tmpl" . }}
     {{template "stream.tmpl" . }}
     {{template "nextPage.tmpl" . }}
+    {{ if .UserData.IsLoggedIn }}
     <input onclick="auth('logout')" value="logout" class="signupFormButt navButt"/>
+    {{end}}
   </body>
 </html>
