--- a/internal/shared/css/main.css
+++ b/internal/shared/css/main.css
@@ -10,7 +10,7 @@ body, html {
   margin: 0 1em;
   background-color: cornsilk;
       background-color: #ffe9d7;
-    background-color: #fffded;
+    /* background-color: #fffded; */
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #bda23c;
