--- a/internal/components/submitForm/submitForm.tmpl
+++ b/internal/components/submitForm/submitForm.tmpl
@@ -2,6 +2,7 @@
 <div class="section-outer submitForm-outer section-submitForm" id="section-submitForm">
   <form class="mainForm" id="fileUploadForm" enctype="multipart/form-data">
     <textarea class="body" id="bodyText" placeholder="post something . . ." name="myText"></textarea>
+    <input class="tags" />
     <div class="formButtons">
       <label for="file-upload" class="uploadButt navButt">
         Upload Image or Video . . .
