--- a/internal/pages/main/main.tmpl
+++ b/internal/pages/main/main.tmpl
@@ -4,12 +4,13 @@
   <body>
     {{template "banner.tmpl" . }}
     {{template "nav.tmpl" . }}
-    {{template "loginForm.tmpl" . }}
     {{template "submitForm.tmpl" . }}
     {{template "stream.tmpl" . }}
     {{template "nextPage.tmpl" . }}
     {{ if .UserData.IsLoggedIn }}
     <input onclick="auth('logout')" value="logout" class="signupFormButt navButt"/>
+    {{ else }}
+    {{template "loginForm.tmpl" . }}
     {{end}}
   </body>
 </html>
