--- a/internal/components/submitForm/submitForm.tmpl
+++ b/internal/components/submitForm/submitForm.tmpl
@@ -6,7 +6,7 @@
     <div class="formButtons">
       <label for="file-upload" class="uploadButt navButt">
         Upload Image or Video . . .
-        <input type="file" id="file-upload" name="myFile">
+        <input type="file" id="file-upload" name="media">
       </label>
       <input onclick="submitPost()" value="Post" class="postSubmitButt navButt"/>
     </div>
