--- a/internal/pages/main/main.tmpl
+++ b/internal/pages/main/main.tmpl
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
-{{template "head" . }} 
+{{template "head.tmpl" . }} 
   <body>
     {{template "banner.tmpl" . }}
     {{template "nav.tmpl" . }}
