--- a/internal/shared/css/main.css
+++ b/internal/shared/css/main.css
@@ -1,4 +1,4 @@
-{{define "shared_css"}}
+@import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -38,4 +38,3 @@ input:focus-visible {
 @keyframes scalin {
   0% { transform: scale(0); }
 }
-{{end}}
